feat: methodology completed

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -606,3 +606,41 @@
 	pages = {1500},
 	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\ZB6CP4QF\\Seo and Kong - 2024 - VerSA Versatile Systolic Array Architecture for Sparse and Dense Matrix Multiplications.pdf:application/pdf},
 }
+
+@article{snopce_latency_2021,
+	title = {Latency {Analysis} in the 2-{Dimensional} {Systolic} {Arrays} for {Matrix} {Multiplication}},
+	volume = {15},
+	copyright = {https://www.naun.org/main/NAUN/computers/2021/a022007-001(2021).pdf},
+	issn = {1998-4308},
+	url = {https://www.naun.org/main/NAUN/computers/2021/a022007-001(2021).pdf},
+	doi = {10.46300/9108.2021.15.1},
+	abstract = {This paper deals with the latency analysis in a twodimensional systolic array for matrix multiplication. The latency for all possible connection schemes is discussed. In this way there is obtained the lower bound of the latency that can be achieved using such arrays.},
+	language = {en},
+	urldate = {2025-10-16},
+	journal = {International Journal of Computers},
+	author = {Snopce, Halil and Aliu, Azir},
+	month = mar,
+	year = {2021},
+	pages = {1--7},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\S2TFID53\\Snopce and Aliu - 2021 - Latency Analysis in the 2-Dimensional Systolic Arrays for Matrix Multiplication.pdf:application/pdf},
+}
+
+@inproceedings{qin_sigma_2020,
+	address = {San Diego, CA, USA},
+	title = {{SIGMA}: {A} {Sparse} and {Irregular} {GEMM} {Accelerator} with {Flexible} {Interconnects} for {DNN} {Training}},
+	copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+	isbn = {978-1-7281-6149-5},
+	shorttitle = {{SIGMA}},
+	url = {https://ieeexplore.ieee.org/document/9065523/},
+	doi = {10.1109/HPCA47549.2020.00015},
+	abstract = {The advent of Deep Learning (DL) has radically transformed the computing industry across the entire spectrum from algorithms to circuits. As myriad application domains embrace DL, it has become synonymous with a genre of workloads across vision, speech, language, recommendations, robotics, and games. The key compute kernel within most DL workloads is general matrix-matrix multiplications (GEMMs), which appears frequently during both the forward pass (inference and training) and backward pass (training). GEMMs are a natural choice for hardware acceleration to speed up training, and have led to 2D systolic architectures like NVIDIA tensor cores and Google Tensor Processing Unit (TPU).},
+	language = {en},
+	urldate = {2025-10-16},
+	booktitle = {2020 {IEEE} {International} {Symposium} on {High} {Performance} {Computer} {Architecture} ({HPCA})},
+	publisher = {IEEE},
+	author = {Qin, Eric and Samajdar, Ananda and Kwon, Hyoukjun and Nadella, Vineet and Srinivasan, Sudarshan and Das, Dipankar and Kaul, Bharat and Krishna, Tushar},
+	month = feb,
+	year = {2020},
+	pages = {58--70},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\YTBVYQFD\\Qin et al. - 2020 - SIGMA A Sparse and Irregular GEMM Accelerator with Flexible Interconnects for DNN Training.pdf:application/pdf},
+}
